# Pathfinder

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.gradle  native.gradle
Pathfinder-Core/: Makefile  README.md  build.gradle
Pathfinder-Core/examples/: basic.c  swerve.c  tank.c
Pathfinder-Core/include/: pathfinder.h
Pathfinder-Core/include/pathfinder/: fit.h  io.h  mathutil.h  spline.h  structs.h
Pathfinder-Core/include/pathfinder/threading/: threadpool.h
Pathfinder-Core/src/: generator.c  io.c  trajectory.c
Pathfinder-Core/src/followers/: encoder.c
Pathfinder-Core/src/modifiers/: tank.c
Pathfinder-Core/src/threading/: threadpool.c
Pathfinder-Java/: Makefile  build.gradle  jni.gradle  settings.gradle
Pathfinder-Java/gradle/wrapper/: gradle-wrapper.properties
Pathfinder-Java/src/main/java/jaci/pathfinder/: Pathfinder.java  PathfinderJNI.java  Trajectory.java  Waypoint.java
Pathfinder-Java/src/main/java/jaci/pathfinder/followers/: EncoderFollower.java
Pathfinder-Java/src/main/java/jaci/pathfinder/modifiers/: SwerveModifier.java  (+1 more)
Pathfinder-Java/src/main/resources/Mac/x86/: libpathfinderjava.dylib
Pathfinder-Java/src/main/resources/Mac/x86_64/: libpathfinderjava.dylib
Pathfinder-Java/src/native/c/: pathfinder_java.c
Pathfinder-Java/src/native/jni_headers/: jaci_pathfinder_PathfinderJNI.h
examples/: tank.c
gradle/wrapper/: gradle-wrapper.properties
include/pathfinder/: fit.h  io.h  trajectory.h
include/pathfinder/followers/: distance.h
include/pathfinder/modifiers/: swerve.h  tank.h
src/: generator.c  trajectory.c
